# Triton-distributed

./: .gitignore  .gitmodules  CMakeLists.txt  README-cn.md  README.md  code-format.sh  launch.sh  launch_amd.sh  simple_comm_kernel.py  sync-history.md
.github/workflows/: amd-ci.yml
backends/amd/backend/: compiler.py
backends/amd/language/hip/: libdevice.py
backends/nvidia/backend/: compiler.py  driver.py
backends/nvidia/language/cuda/: language_extra.py  libnvshmem_device.py
csrc/: CMakeLists.txt
csrc/lib/: CMakeLists.txt  op_pybind.cc  registry.h
docs/: amd-perf.md  autotuner-cn.md  autotuner.md  build.md  conf.py  e2e.md  index.rst  mega_triton_kernel.md  primitives.md  requirements-docs.txt  update-upstream.md
docs/examples/: GALLERY_HEADER.rst
docs/getting-started/: installation.rst
docs/getting-started/e2e/: e2e_dense.md  index.rst
docs/getting-started/tutorials/: 01-distributed-notify-wait.rst  02-intra-node-allgather.rst  03-inter-node-allgather.rst  04-deepseek-infer-all2all.rst  05-intra-node-reduce-scatter.rst  06-inter-node-reduce-scatter.rst  07-overlapping-allgather-gemm.rst  08-overlapping-gemm-reduce-scatter.rst  09-AMD-overlapping-allgather-gemm.rst  10-AMD-overlapping-gemm-reduce-scatter.rst  index.rst
include/: CMakeLists.txt
include/TritonDistributed/Conversion/: CMakeLists.txt
include/TritonDistributed/Conversion/TritonDistributedToLLVM/: CMakeLists.txt  Passes.h  Passes.td  TritonDistributedToLLVMPass.h
include/TritonDistributed/Conversion/TritonDistributedToTritonGPU/: CMakeLists.txt  Passes.h  Passes.td  TritonDistributedToTritonGPUPass.h
include/TritonDistributed/Dialect/: CMakeLists.txt
lib/Conversion/TritonDistributedToLLVM/: CMakeLists.txt  SIMTOpToLLVM.cpp
lib/Conversion/TritonDistributedToLLVM/AMD/: ConvertAMDDistributedToLLVM.cpp  DistributedOpToLLVM.cpp  LibDeviceToLLVM.cpp
lib/Conversion/TritonDistributedToLLVM/NVIDIA/: ConvertTritonDistributedToLLVM.cpp  DistributedOpToLLVM.cpp
lib/Conversion/TritonDistributedToTritonGPU/: CMakeLists.txt  TritonDistributedToTritonGPU.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Distributed/IR/: Dialect.cpp  Ops.cpp
lib/Dialect/SIMT/IR/: CMakeLists.txt  Dialect.cpp  Ops.cpp
patches/triton/cmake/: AddTritonUnitTest.cmake
patches/triton/lib/Analysis/: AxisInfo.cpp
patches/triton/python/src/: ir.cc
python/: build_helpers.py  pyproject.toml  setup.py  triton
python/src/: ir.cc  passes.cc  triton_distributed.cc
python/triton_dist/: __init__.py  autotuner.py  utils.py
python/triton_dist/benchmark/: bench_allgather_gemm.py
python/triton_dist/kernels/: allreduce.py  common_ops.py
python/triton_dist/kernels/amd/: all_gather_gemm.py  common_ops.py  gemm_reduce_scatter.py
python/triton_dist/kernels/nvidia/: __init__.py  ag_gemm_threadblock_swizzle.py  allgather.py  allgather_gemm.py  allgather_group_gemm.py  allreduce.py  comm_perf_model.py  common_ops.py  ep_a2a.py  flash_decode.py  gemm_allreduce.py  gemm_perf_model.py  gemm_reduce_scatter.py  low_latency_all_to_all.py  low_latency_allgather.py  moe_reduce_rs.py  moe_utils.py  p2p.py  reduce_scatter.py  sp_ag_attention_inter_node.py  sp_ag_attention_intra_node.py  threadblock_swizzle_ag_moe.cc  threadblock_swizzle_ag_moe.cu  threadblock_swizzle_ag_moe.py  threadblock_swizzle_ag_moe_triton.py
python/triton_dist/language/: __init__.py  core.py  distributed_ops.py  semantic.py  simt_ops.py
python/triton_dist/language/extra/: libshmem_device.py
python/triton_dist/layers/amd/: tp_attn.py  tp_mlp.py
python/triton_dist/layers/nvidia/: __init__.py  ep_a2a_layer.py  gemm_allreduce_layer.py  low_latency_allgather_layer.py  p2p.py  sp_flash_decode_layer.py  tp_attn.py  tp_mlp.py  tp_moe.py
python/triton_dist/mega_triton_kernel/: __init__.py
python/triton_dist/mega_triton_kernel/core/: __init__.py  builder.py  code_generator.py  config.py  registry.py  scheduler.py  task_base.py
python/triton_dist/mega_triton_kernel/kernels/: __init__.py  activation.py  allreduce.py  barrier.py  elementwise.py  flash_attn.py  linear.py  mlp_fc1.py  norm.py  prefetch.py  task_context.py  utils.py
python/triton_dist/mega_triton_kernel/models/: __init__.py  model_builder.py  paged_kv_cache.py  qwen3.py  utils.py
python/triton_dist/mega_triton_kernel/tasks/: __init__.py  activation.py  allreduce.py  attn.py  barrier.py  elementwise.py  linear.py  norm.py  prefetch.py  utils.py
python/triton_dist/mega_triton_kernel/test/: torch_impl_utils.py
python/triton_dist/models/: __init__.py  config.py  engine.py  kv_cache.py  qwen.py  qwen_moe.py  utils.py
python/triton_dist/test/amd/: test_ag_gemm_intra_node.py  test_distributed-notify-wait.py  test_e2e_inference.py  test_extern_functions.py  test_gemm_rs_intra_node.py  test_libdevice.py  test_rocshmem_api.py  test_tp_attn.py  test_tp_e2e.py  test_tp_mlp.py  test_wait_and_notify.py
python/triton_dist/test/nvidia/: perf_ring_reduce_tma.py  test_ag_gemm.py  test_ag_moe.py  test_ag_small_msg.py  test_all_gather.py  test_all_to_all.py  test_allreduce.py  test_common_ops.py  test_ep_a2a.py  (+27 more)
python/triton_dist/tools/: compile_aot.py
scripts/: aot_kernels.txt  build_e2e_env.sh  check_license.py  download_prebuild_ompi.sh  gen_aot_code.sh  launch.sh  launch_amd.sh  pull_upstream_triton.sh  setenv.sh
shmem/nvshmem_bind/: build.sh
shmem/nvshmem_bind/nvshmemi/: transfer_device.cu
shmem/nvshmem_bind/pynvshmem/: CMakeLists.txt
shmem/nvshmem_bind/pynvshmem/python/pynvshmem/: __init__.py
shmem/nvshmem_bind/pynvshmem/src/: pynvshmem.cc
shmem/rocshmem_bind/: build.sh  build_rocshmem.sh
shmem/rocshmem_bind/pyrocshmem/: setup.py
tutorials/: 01-distributed-notify-wait.py  02-intra-node-allgather.py  03-inter-node-allgather.py  03-sm-count-allgather-benchmark.py  04-deepseek-infer-all2all.py  04-sm-aware-comm-compute-overlap.py  05-intra-node-reduce-scatter.py  05-optimized-sm-aware-overlap.py  06-inter-node-reduce-scatter.py  07-overlapping-allgather-gemm.py  08-overlapping-gemm-reduce-scatter.py  09-AMD-overlapping-allgather-gemm.py  10-AMD-overlapping-gemm-reduce-scatter.py
(+31 files in other folders)
